# rChart

./: .gitignore  CMakeLists.txt  LICENSE  buildAndRun.sh  gridSearch.txt  readme.md  srHeatmap.csv
classification/: basicnn.py  conv-nn.py  custom-algorithm.py
include/: API.hpp  ATR.hpp  BackTester.hpp  Candlestick.hpp  Chart.hpp  DesiredStrategy.hpp  Indicator.hpp  LiqChange.hpp  LiquidityHeatmap.hpp  Order.hpp  StandardDeviation.hpp  SupportResistance.hpp  Volume.hpp  turboColormap.hpp  viridis.hpp
include-raylib/: Makefile  cmake_install.cmake
src/: API.cpp  ATR.cpp  BackTester.cpp  Chart.cpp  Indicator.cpp  LiqChange.cpp  LiquidityHeatmap.cpp  StandardDeviation.cpp  SupportResistance.cpp  Volume.cpp  main.cpp
